# core

./: .gitignore  .gitmodules  Cargo.toml  build.rs
schemas/: monster.fbs  request_commands.fbs
src/: commands.rs  components.rs  gapi.rs  layout.rs  lib.rs  memory.rs  render_state.rs  serialize.rs
src/debug_services/: api.rs  commands.rs  commands_registry.rs  mod.rs  profile.rs  render.rs  state.rs  step.rs
src/render/: camera_system.rs  components.rs  gapi.rs  grid_system.rs  mod.rs  move_camera_system.rs  system.rs  work_area.rs
src/schemas/: mod.rs
src/systems/: camera.rs  grid.rs  mod.rs  move_camera.rs  work_area.rs
