[package]
name = "backend"
version = "0.1.0"
authors = ["Andrey Kabylin <andrey@kabylin.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "backend"
crate-type = ["staticlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
log = "0.4"
env_logger = "0.7"
typed-arena = "2.0.1"
legion = "*"
lazy_static = "1.4.0"
flatbuffers = "0.6.1"
