[package]
name = "backend"
version = "0.1.0"
authors = ["Andrey Kabylin <andrey@kabylin.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "backend"
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
flatc-rust = "0.1.2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
log = "0.4"
env_logger = "0.7"
typed-arena = "2.0.1"
legion = "0.2.1"
lazy_static = "1.4.0"
flatbuffers = "0.6.1"
capnp = "0.12.2"
bumpalo = { version = "3.3.0", features = ["collections"] }
phf = "0.8"
fxhash = "0.2.1"
regex = "1"
